--- a/saga.cabal
+++ b/saga.cabal
@@ -30,5 +30,5 @@ executable saga
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0
-    hs-source-dirs:   app
+    hs-source-dirs:   app, Saga
     default-language: Haskell2010
