--- a/saga.cabal
+++ b/saga.cabal
@@ -1,34 +1,36 @@
-cabal-version:      2.4
-name:               saga
-version:            0.1.0.0
+cabal-version: 1.12
 
--- A short (one-line) description of the package.
--- synopsis:
+-- This file has been generated from package.yaml by hpack version 0.35.1.
+--
+-- see: https://github.com/sol/hpack
 
--- A longer description of the package.
--- description:
+name:           saga
+version:        0.1.0.0
+license:        BSD3
+license-file:   LICENSE
+build-type:     Simple
+extra-source-files:
+    README.md
+    LICENSE
 
--- A URL where users can report bugs.
--- bug-reports:
-
--- The license under which the package is released.
--- license:
-author:             tiansivive
-maintainer:         vilaverde@exabel.com
-
--- A copyright notice.
--- copyright:
--- category:
-extra-source-files: CHANGELOG.md
-
-executable saga
-    main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
-    hs-source-dirs:   app, Saga
-    default-language: Haskell2010
+library
+  exposed-modules:
+      Main
+      Saga.AST.Syntax
+      Saga.Lexer.Lexer
+      Saga.Lexer.Tokens
+      Saga.Parser.Parser
+  other-modules:
+      Paths_saga
+  hs-source-dirs:
+      src
+  default-extensions:
+      OverloadedStrings
+  build-tools:
+      alex
+    , happy
+  build-depends:
+      array
+    , base
+    , bytestring
+  default-language: Haskell2010
