--- a/saga.cabal
+++ b/saga.cabal
@@ -16,6 +16,7 @@ extra-source-files:
 library
   exposed-modules:
       Main
+      Saga.AST.Pretty
       Saga.AST.Syntax
       Saga.Lexer.Lexer
       Saga.Lexer.Tokens
@@ -33,4 +34,5 @@ library
       array
     , base
     , bytestring
+    , prettyprinter
   default-language: Haskell2010
