downgrade to GHC 9.2.5 for HLS vscode support

--- a/saga.cabal
+++ b/saga.cabal
@@ -35,5 +35,8 @@ library
       array
     , base
     , bytestring
+    , containers
+    , mtl
     , prettyprinter
+    , transformers
   default-language: Haskell2010
