--- a/saga.cabal
+++ b/saga.cabal
@@ -17,9 +17,10 @@ library
   exposed-modules:
       Main
       Saga.AST.Evaluation
+      Saga.AST.Inference
       Saga.AST.Pretty
+      Saga.AST.Subtyping
       Saga.AST.Syntax
-      Saga.AST.TypeCheck
       Saga.Lexer.Lexer
       Saga.Lexer.Tokens
       Saga.Parser.Parser
@@ -49,6 +50,8 @@ test-suite saga-test
   main-is: Spec.hs
   other-modules:
       Saga.AST.EvaluationSpec
+      Saga.AST.InferenceSpec
+      Saga.AST.SubtypingSpec
       Saga.Parser.ParserSpec
       SpecHook
       Paths_saga
