--- a/saga.cabal
+++ b/saga.cabal
@@ -16,6 +16,7 @@ extra-source-files:
 library
   exposed-modules:
       Main
+      Saga.AST.Check
       Saga.AST.Evaluation
       Saga.AST.Inference
       Saga.AST.Subtyping
@@ -40,6 +41,7 @@ library
     , containers
     , haskeline
     , mtl
+    , pretty-simple
     , transformers
   default-language: Haskell2010
 
@@ -66,6 +68,7 @@ test-suite saga-test
     , haskeline
     , hspec
     , mtl
+    , pretty-simple
     , saga
     , transformers
   default-language: Haskell2010
