--- a/saga.cabal
+++ b/saga.cabal
@@ -16,11 +16,13 @@ extra-source-files:
 library
   exposed-modules:
       Main
-      Saga.AST.Check
       Saga.AST.Evaluation
-      Saga.AST.Inference
-      Saga.AST.Subtyping
+      Saga.AST.Scripts
       Saga.AST.Syntax
+      Saga.AST.TypeSystem.Check
+      Saga.AST.TypeSystem.Inference
+      Saga.AST.TypeSystem.Subtyping
+      Saga.AST.TypeSystem.Types
       Saga.Lexer.Lexer
       Saga.Lexer.Tokens
       Saga.Parser.Parser
