--- a/saga.cabal
+++ b/saga.cabal
@@ -21,12 +21,17 @@ library
       Saga.AST.Syntax
       Saga.AST.TypeSystem.BuiltIns
       Saga.AST.TypeSystem.Check
+      Saga.AST.TypeSystem.HindleyMilner.Environment
+      Saga.AST.TypeSystem.HindleyMilner.Inference
+      Saga.AST.TypeSystem.HindleyMilner.Refinement
+      Saga.AST.TypeSystem.HindleyMilner.Types
       Saga.AST.TypeSystem.Inference
       Saga.AST.TypeSystem.Kinds
       Saga.AST.TypeSystem.Types
       Saga.Lexer.Lexer
       Saga.Lexer.Tokens
       Saga.Parser.Parser
+      Saga.Parser.ParsingInfo
       Saga.Utils.Utils
   other-modules:
       Paths_saga
