--- a/saga.cabal
+++ b/saga.cabal
@@ -31,6 +31,7 @@ library
       Saga.Lexer.Lexer
       Saga.Lexer.Tokens
       Saga.Parser.Parser
+      Saga.Parser.ParserHM
       Saga.Parser.ParsingInfo
       Saga.Utils.Utils
   other-modules:
