--- a/saga.cabal
+++ b/saga.cabal
@@ -21,15 +21,15 @@ library
       Saga.Language.Core.Syntax
       Saga.Language.Evaluation
       Saga.Language.Generation.JS
-      Saga.Language.TypeSystem.HindleyMilner.Check
-      Saga.Language.TypeSystem.HindleyMilner.Constraints
-      Saga.Language.TypeSystem.HindleyMilner.Environment
-      Saga.Language.TypeSystem.HindleyMilner.Errors
-      Saga.Language.TypeSystem.HindleyMilner.Inference
-      Saga.Language.TypeSystem.HindleyMilner.Lib
-      Saga.Language.TypeSystem.HindleyMilner.Refinement
-      Saga.Language.TypeSystem.HindleyMilner.Shared
-      Saga.Language.TypeSystem.HindleyMilner.Types
+      Saga.Language.TypeSystem.Check
+      Saga.Language.TypeSystem.Constraints
+      Saga.Language.TypeSystem.Environment
+      Saga.Language.TypeSystem.Errors
+      Saga.Language.TypeSystem.Inference
+      Saga.Language.TypeSystem.Lib
+      Saga.Language.TypeSystem.Refinement
+      Saga.Language.TypeSystem.Shared
+      Saga.Language.TypeSystem.Types
       Saga.Lexer.Lexer
       Saga.Lexer.Tokens
       Saga.Parser.Desugar
