adding kind unification

--- a/saga.cabal
+++ b/saga.cabal
@@ -26,6 +26,7 @@ library
       Saga.Language.TypeSystem.Environment
       Saga.Language.TypeSystem.Errors
       Saga.Language.TypeSystem.Inference
+      Saga.Language.TypeSystem.Kinds
       Saga.Language.TypeSystem.Lib
       Saga.Language.TypeSystem.Refinement
       Saga.Language.TypeSystem.Shared
