first pattern matching working version

--- a/saga.cabal
+++ b/saga.cabal
@@ -28,6 +28,7 @@ library
       Saga.Language.TypeSystem.Inference
       Saga.Language.TypeSystem.Kinds
       Saga.Language.TypeSystem.Lib
+      Saga.Language.TypeSystem.Normalization
       Saga.Language.TypeSystem.Refinement
       Saga.Language.TypeSystem.Shared
       Saga.Language.TypeSystem.Types
