--- a/saga.cabal
+++ b/saga.cabal
@@ -40,6 +40,7 @@ library
       Saga.Language.Typechecker.Qualification
       Saga.Language.Typechecker.Shared
       Saga.Language.Typechecker.Solver.Constraints
+      Saga.Language.Typechecker.Solver.Protocols
       Saga.Language.Typechecker.Solver.Substitution
       Saga.Language.Typechecker.Solver.Unification
       Saga.Language.Typechecker.Type
