--- a/stack.yaml
+++ b/stack.yaml
@@ -36,7 +36,8 @@ packages:
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
-# extra-deps:
+extra-deps:
+  - z3-408.2
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
@@ -61,8 +62,8 @@ packages:
 # arch: x86_64
 #
 # Extra directories used by Stack for building
-# extra-include-dirs: [/path/to/dir]
-# extra-lib-dirs: [/path/to/dir]
+extra-include-dirs: [/opt/homebrew/Cellar/z3/4.12.2/include]
+extra-lib-dirs: [/opt/homebrew/Cellar/z3/4.12.2/lib]
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
