--- a/stack.yaml
+++ b/stack.yaml
@@ -40,8 +40,8 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps:
-  - z3-408.2
+# extra-deps:
+#  - z3-408.2
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
@@ -61,8 +61,8 @@ extra-deps:
 # arch: x86_64
 #
 # Extra directories used by Stack for building
-extra-include-dirs: [/Users/t.vilaverde/Workspace/pantheon/saga/.external/z3/4.8/include]
-extra-lib-dirs: [/Users/t.vilaverde/Workspace/pantheon/saga/.external/z3/4.8/bin]
+# extra-include-dirs: [/Users/t.vilaverde/Workspace/pantheon/saga/.external/z3/4.8/include]
+# extra-lib-dirs: [/Users/t.vilaverde/Workspace/pantheon/saga/.external/z3/4.8/bin]
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
