--- a/saga.cabal
+++ b/saga.cabal
@@ -21,6 +21,27 @@ library
       Saga.Language.Core.Expr
       Saga.Language.Core.Literals
       Saga.Language.Evaluation
+      Saga.Language.Syntax.AST
+      Saga.Language.Syntax.Desugared.AST
+      Saga.Language.Syntax.Desugared.Kinds
+      Saga.Language.Syntax.Desugared.Types
+      Saga.Language.Syntax.Desugared.Values
+      Saga.Language.Syntax.Elaborated.AST
+      Saga.Language.Syntax.Elaborated.Kinds
+      Saga.Language.Syntax.Elaborated.Types
+      Saga.Language.Syntax.Elaborated.Values
+      Saga.Language.Syntax.Evaluated.AST
+      Saga.Language.Syntax.Evaluated.Kinds
+      Saga.Language.Syntax.Evaluated.Polymorphism
+      Saga.Language.Syntax.Evaluated.Types
+      Saga.Language.Syntax.Evaluated.Values
+      Saga.Language.Syntax.Liquids
+      Saga.Language.Syntax.Literals
+      Saga.Language.Syntax.Source.Values
+      Saga.Language.Syntax.Zonked.AST
+      Saga.Language.Syntax.Zonked.Kinds
+      Saga.Language.Syntax.Zonked.Types
+      Saga.Language.Syntax.Zonked.Values
       Saga.Language.Typechecker.Environment
       Saga.Language.Typechecker.Errors
       Saga.Language.Typechecker.Evaluation
