--- a/saga.cabal
+++ b/saga.cabal
@@ -42,17 +42,23 @@ library
       Saga.Language.Syntax.Zonked.Kinds
       Saga.Language.Syntax.Zonked.Types
       Saga.Language.Syntax.Zonked.Values
+      Saga.Language.Typechecker.Elaboration.Annotations
+      Saga.Language.Typechecker.Elaboration.Generalization
       Saga.Language.Typechecker.Elaboration.Monad
       Saga.Language.Typechecker.Elaboration.Types
       Saga.Language.Typechecker.Elaboration.Values.Effects
       Saga.Language.Typechecker.Elaboration.Values.Expressions
       Saga.Language.Typechecker.Elaboration.Values.Patterns
       Saga.Language.Typechecker.Elaboration.Values.Shared
+      Saga.Language.Typechecker.Env
       Saga.Language.Typechecker.Environment
       Saga.Language.Typechecker.Errors
       Saga.Language.Typechecker.Evaluation
+      Saga.Language.Typechecker.Evaluation.Shared
+      Saga.Language.Typechecker.Evaluation.Types
       Saga.Language.Typechecker.Inference.Elaboration
       Saga.Language.Typechecker.Inference.Inference
+      Saga.Language.Typechecker.Inference.Instantiation
       Saga.Language.Typechecker.Inference.Kind
       Saga.Language.Typechecker.Inference.Type.Expr
       Saga.Language.Typechecker.Inference.Type.Generalization
@@ -80,6 +86,7 @@ library
       Saga.Language.Typechecker.Solver.Shared
       Saga.Language.Typechecker.Solver.Substitution
       Saga.Language.Typechecker.Solver.Unification
+      Saga.Language.Typechecker.Solving.Constraints
       Saga.Language.Typechecker.Type
       Saga.Language.Typechecker.TypeExpr
       Saga.Language.Typechecker.Variables
@@ -107,7 +114,7 @@ library
       src
   default-extensions:
       OverloadedStrings
-  ghc-options: -fdefer-typed-holes
+  ghc-options: -Wwarn-typed-holes -fprint-potential-instances
   build-tools:
       alex
     , happy
