--- a/saga.cabal
+++ b/saga.cabal
@@ -48,6 +48,7 @@ library
       Saga.Language.Typechecker.Elaboration.Instantiation
       Saga.Language.Typechecker.Elaboration.Monad
       Saga.Language.Typechecker.Elaboration.Traversals
+      Saga.Language.Typechecker.Elaboration.Types.Kinds
       Saga.Language.Typechecker.Elaboration.Types.Shared
       Saga.Language.Typechecker.Elaboration.Types.Types
       Saga.Language.Typechecker.Elaboration.Values.Expressions
