--- a/saga.cabal
+++ b/saga.cabal
@@ -22,21 +22,17 @@ library
       Saga.Language.Core.Literals
       Saga.Language.Evaluation
       Saga.Language.Syntax.AST
-      Saga.Language.Syntax.Desugared.AST
-      Saga.Language.Syntax.Desugared.Kinds
-      Saga.Language.Syntax.Desugared.Types
-      Saga.Language.Syntax.Desugared.Values
       Saga.Language.Syntax.Elaborated.AST
       Saga.Language.Syntax.Elaborated.Kinds
       Saga.Language.Syntax.Elaborated.Types
       Saga.Language.Syntax.Elaborated.Values
-      Saga.Language.Syntax.Evaluated.AST
-      Saga.Language.Syntax.Evaluated.Kinds
-      Saga.Language.Syntax.Evaluated.Types
-      Saga.Language.Syntax.Evaluated.Values
       Saga.Language.Syntax.Liquids
       Saga.Language.Syntax.Literals
       Saga.Language.Syntax.Polymorphism
+      Saga.Language.Syntax.Reduced.AST
+      Saga.Language.Syntax.Reduced.Kinds
+      Saga.Language.Syntax.Reduced.Types
+      Saga.Language.Syntax.Reduced.Values
       Saga.Language.Syntax.Source.Values
       Saga.Language.Syntax.Zonked.AST
       Saga.Language.Syntax.Zonked.Kinds
