--- a/saga.cabal
+++ b/saga.cabal
@@ -88,7 +88,10 @@ library
       Saga.Language.Typechecker.Solving.Constraints
       Saga.Language.Typechecker.Solving.Cycles
       Saga.Language.Typechecker.Solving.Equalities
+      Saga.Language.Typechecker.Solving.Implications
       Saga.Language.Typechecker.Solving.Monad
+      Saga.Language.Typechecker.Solving.Protocols
+      Saga.Language.Typechecker.Solving.Refinements
       Saga.Language.Typechecker.Solving.Run
       Saga.Language.Typechecker.Solving.Shared
       Saga.Language.Typechecker.Solving.Test
